#142: Method 'Class.newInstance()' has been deprecated in Java 9.